# hlit

./: .gitignore  LICENSE  alias.sh  haskell-report.cabal  hlit.cabal  hlit.sublime-project  notes.md  setup-sandboxes
examples/: c3.lhs  chart.lhs  diagrams.lhs  example.lhs  example.md  table.lhs
haskell-report/: Main.hs
haskell-report/HaskellReport/: Extract.hs  Interp.hs  RInterp.hs
hlit/: Main.hs  hlit.hs
hlit-c3js/: hlit-c3js.cabal
hlit-c3js/src/Text/Lit/: C3js.hs
hlit-chart-diagrams/: hlit-chart-diagrams.cabal
hlit-chart-diagrams/src/Text/Lit/: ChartDiagrams.hs
hlit-diagrams-svg/: hlit-diagrams-svg.cabal
hlit-diagrams-svg/src/Text/Lit/: DiagramsSVG.hs
hlit-diagrams-svg/src/Text/Lit/Diagrams/: SVG.hs
hlit-tool/: hlit-tool.cabal
hlit-tool/hlit/: hlit.hs
hlit-tool/src/: Lit.hs
hlit-tool/src/Lit/: DocSplice.hs  ErrorHandling.hs  Extract.hs  Generic.hs  MkDoc.hs  Splice.hs  Walk.hs
hlit-tool/tests/: tests.hs
hlit-tool/tests/Lit/Tests/: Splice.hs
hlit-types/: hlit-types.cabal
hlit-types/src/Text/Lit/: Internal.hs  Render.hs  RenderFloat.hs  Report.hs  Table.hs
hlit-types/tests/: tests.hs
hlit/Lit/: Extract.hs  Interp.hs  MkDoc.hs  Splice.hs
src/Text/Lit/: PrettyNum.hs  Render.hs  RenderFloat.hs  Report.hs  Types.hs
src/Text/Report/: Types.hs
tests/: main.hs  tests.hs
tests/Lit/Tests/: Splice.hs
