name:                haskell-report
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:
  Evaluate inline expressions in pandoc supported formates.
  Rich, extendable pretty printing.

-- A longer description of the package.
-- description:         

license:             BSD3
license-file:        LICENSE
author:              Anders Jellinggaard
maintainer:          anders.jel@gmail.com
category:            Text
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

cabal-version:       >=1.10

library
  build-depends:
    base >=4.6 && <4.7,
    pandoc-types,
    transformers
  exposed-modules:
    Text.Report.Types
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

executable haskell-report
  main-is:             Main.hs
  build-depends:
    haskell-report,
    base >=4.6 && <4.7,
    ghc,
    ghc-paths,
    pandoc,
    pandoc-types
  hs-source-dirs:      haskell-report
  default-language:    Haskell2010
  ghc-options:         -Wall
  