name:                hlit
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:
  Evaluate inline expressions in pandoc supported formats.
  Rich, extendable pretty printing.

-- A longer description of the package.
-- description:         

license:             BSD3
license-file:        LICENSE
author:              Anders Jellinggaard
maintainer:          anders.jel@gmail.com
category:            Text
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

cabal-version:       >=1.10

library
  build-depends:
    base >=4.6 && <4.7,
    pandoc-types,
    transformers
  exposed-modules:
    Text.Lit.Types
  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hlit
  main-is:             Main.hs
  build-depends:
    hlit,
    base >=4.6 && <4.7,
    aeson,
    bytestring,
    data-default,
    data-lens,
    data-lens-template,
    ghc,
    ghc-paths,
    pandoc,
    pandoc-types,
    process-extras,
    transformers
  hs-source-dirs:      hlit
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind
  