name:                hlit-c3js
version:             0.1.0.0
synopsis:            Make plots in hlit using the C3.js plotting library.
-- description:
license:             GPL-3
license-file:        ../LICENSE
author:              Anders Jellinggaard
maintainer:          anders.jel@gmail.com
copyright:           Copyright (c) 2014 Anders Jellinggaard
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
    Text.Lit.C3js
  build-depends:
    base >=4.6,
    hlit-types,
    pandoc-types,
    aeson,
    bytestring,
    unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
