name:                hlit-chart-diagrams
version:             0.1.0.0
synopsis:            Include plots in hlit documents using the Chart package.
-- description:
license:             GPL-3
license-file:        ../LICENSE
author:              Anders Jellinggaard
maintainer:          anders.jel@gmail.com
copyright:           Copyright (c) 2014 Anders Jellinggaard
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
    Text.Lit.ChartDiagrams
  build-depends:
    base >=4.6,
    Chart-diagrams,
    Chart,
    data-default,
    containers,
    transformers,
    hlit-types,
    pandoc-types
  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      src
  default-language:    Haskell2010
