name:                hlit-diagrams-svg

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis:            Include diagrams in hlit documents using diagrams-svg.
-- description:         
license:             GPL-3
license-file:        ../LICENSE
author:              Anders Jellinggaard
maintainer:          anders.jel@gmail.com
copyright:           Copyright (c) 2014 Anders Jellinggaard
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10
library
  exposed-modules:     
    Text.Lit.Diagrams.SVG
  build-depends:
    base >=4.6
  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      src 
  default-language:    Haskell2010
  