name:                hlit-tool
version:             0.1.0.0
synopsis:            Tool used to run hlit documents

-- A longer description of the package.
-- description:

license:             GPL-3
license-file:        ../LICENSE
author:              Anders Jellinggaard
maintainer:          anders.jel@gmail.com
copyright:           Copyright (c) 2014 Anders Jellinggaard
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  build-depends:
    aeson,
    ansi-terminal,
    base >=4.6,
    bytestring,
    containers,
    data-default,
    directory,
    fclabels,
    filepath,
    haskell-src-exts,
    hlit-types,
    mtl,
    network-uri,
    pandoc-types,
    process,
    process-extras,
    temporary,
    text,
    transformers
  exposed-modules:
    Lit
    Lit.DocSplice
    Lit.Extract
    Lit.Generic
    Lit.Splice
    Lit.ErrorHandling
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind
  default-extensions:  CPP

executable hlit
  main-is:             hlit.hs
  build-depends:
    hlit-tool,
    base >=4.6
  hs-source-dirs:      hlit
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

test-suite tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  default-language: Haskell2010
  ghc-options:      -Wall -fno-warn-unused-do-bind
  main-is:          tests.hs
  build-depends:
    hlit-tool,
    base >=4.6,
    data-default,
    haskell-src-exts,
    HUnit,
    test-framework,
    test-framework-hunit
