name:                hlit-types
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:
  Evaluate inline expressions in pandoc supported formats.
  Rich, extendable pretty printing.

-- A longer description of the package.
-- description:         

license:             BSD3
license-file:        ../LICENSE
author:              Anders Jellinggaard
maintainer:          anders.jel@gmail.com
category:            Text
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

cabal-version:       >=1.10

flag tests
  description:
    Enable hooks in libraries for running tests.
  default: False

library
  build-depends:
    base >=4.6 && <4.7,
    aeson,
    bytestring,
    containers,
    data-default,
    data-lens,
    directory,
    filepath,
    pandoc-types,
    split,
    transformers
  exposed-modules:
    Text.Lit.Render
    Text.Lit.Report
    Text.Lit.RenderFloat
  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      src
  default-language:    Haskell2010
  if flag(tests)
    cpp-options: -DCOMPILE_TESTS
    Build-depends:
      test-framework,
      test-framework-quickcheck2,
      QuickCheck

test-suite tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  default-language: Haskell2010
  ghc-options:      -Wall -fno-warn-unused-do-bind
  main-is:          tests.hs
  build-depends:
    hlit-types,
    base >=4.6 && <4.7,
    test-framework
