name:                hlit-types
version:             0.1.0.0
synopsis:            Types used in hlit documents
-- description:
license:             GPL-3
license-file:        ../LICENSE
author:              Anders Jellinggaard
maintainer:          anders.jel@gmail.com
copyright:           Copyright (c) 2014 Anders Jellinggaard
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag tests
  description:
    Enable hooks in libraries for running tests.
  default: False

library
  build-depends:
    base >=4.6,
    aeson,
    bytestring,
    containers,
    data-default,
    directory,
    filepath,
    pandoc-types,
    split,
    transformers
  exposed-modules:
    Text.Lit.Render
    Text.Lit.Report
    Text.Lit.RenderFloat
    Text.Lit.Internal
    Text.Lit.Table
  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      src
  default-language:    Haskell2010
  if flag(tests)
    cpp-options: -DCOMPILE_TESTS
    Build-depends:
      test-framework,
      test-framework-quickcheck2,
      QuickCheck

test-suite tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  default-language: Haskell2010
  ghc-options:      -Wall -fno-warn-unused-do-bind
  main-is:          tests.hs
  build-depends:
    hlit-types,
    base >=4.6,
    test-framework
